<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/setting_category_authentication">

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:defaultValue="false"
            android:key="setting_biometric"
            android:summaryOff="@string/setting_biometric_summaryOff"
            android:summaryOn="@string/setting_biometric_summaryOn"
            android:title="@string/setting_biometric_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_password_generator_settings">
        <ListPreference
            android:entries="@array/setting_hash_algorithm_list"
            android:entryValues="@array/setting_hash_algorithm_list"
            android:key="hash_algorithm"
            android:defaultValue="@string/setting_hash_algorithm_default"
            android:summary="@string/setting_hash_algorithm_summary"
            android:title="@string/setting_hash_algorithm" />
    </PreferenceCategory>
</PreferenceScreen>
